# Yolov5-With-OpenVINO

./: .gitignore  CMakeLists.txt  README.md
include/: Model.h  YoloDefine.h  Yolov5Session.h  slog.h
src/: Yolov5Session.cpp  main.cpp  slog.cpp
